--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "neko"
 version = "0.1.0"
 authors = ["cyw <weems1995@hotmail.com>"]
 edition = "2018"
+build = "build.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html]
 
 [dependencies]
+
+[build-dependencies]
+vergen = "5.1.15"
